tests/ui/function-stubbing-error/resolution_errors.expected
error: failed to resolve `<[char ; 10]>::foo`: unable to find `foo` inside `[char; 10]`
resolution_errors.rs
|
| #[kani::stub(<[char; 10]>::foo, stub_foo)]
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to resolve `str::foo`: unable to find `foo` inside `str`
resolution_errors.rs
|
| #[kani::stub(str::foo, stub_foo)]
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to resolve `<[u32]>::foo`: unable to find `foo` inside `[u32]`
resolution_errors.rs
|
| #[kani::stub(<[u32]>::foo, stub_foo)]
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to resolve `<(i32 , i32)>::foo`: unable to find `foo` inside `(i32, i32)`
resolution_errors.rs
|
| #[kani::stub(<(i32, i32)>::foo, stub_foo)]
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to resolve `u8::foo`: unable to find `foo` inside `u8`
resolution_errors.rs
|
| #[kani::stub(u8::foo, stub_foo)]
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to resolve `<Bar as Foo>::bar`: unable to find `bar` inside trait `Foo`
resolution_errors.rs
|
| #[kani::stub(<Bar as Foo>::bar, stub_foo)]
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid stub: function does not have a body, but is not an extern function\
resolution_errors.rs\
|\
| #[kani::stub(<X as A>::bar, B::bar)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
|\
note: `B::bar` does not have a body\
resolution_errors.rs\
|\
|     fn bar(&self) -> u32;\
|     ^^^^^^^^^^^^^^^^^^^^^\
   = help: if this stub refers to associated functions, try using fully-qualified syntax instead

error: failed to resolve `X::bar`: unable to find `bar` inside struct `X`\
resolution_errors.rs\
|\
| #[kani::stub(X::bar, A::bar)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|